--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-  {cfclient, "0.5.0-beta.1", {pkg, harness_ff_erlang_server_sdk}}
+  {cfclient, "1.0.0", {pkg, harness_ff_erlang_server_sdk}}
 ]}.
 
 {
