FFM-8217 Update Erlang sdk version

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,7 @@
 {deps, [
-  {cfclient, "1.0.0", {pkg, harness_ff_erlang_server_sdk}}
+%%  {cfclient, "1.0.0", {pkg, harness_ff_erlang_server_sdk}}
+  {cfclient, "1.1.0", {pkg, harness_ff_erlang_server_sdk}}
+
 ]}.
 
 {
