--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,9 @@
 {deps, [
 %%  {cfclient, "1.0.0", {pkg, harness_ff_erlang_server_sdk}}
-  {cfclient, "1.1.0", {pkg, harness_ff_erlang_server_sdk}}
+    {cfclient, {git, "https://github.com/harness/ff-erlang-server-sdk", {branch, "FFM-8364"}}}
 
-]}.
+
+  ]}.
 
 {
   shell,
@@ -11,3 +12,4 @@
     {apps, [sample]}
   ]
 }.
+{project_plugins, [rebar_mix]}.
