--- a/config/sys.config
+++ b/config/sys.config
@@ -5,6 +5,7 @@
         {name, instance_name_1}
       ]},
       {api_key, {environment_variable, "FF_API_KEY_2"}}]
+
     }
   ]
 },
@@ -19,20 +20,22 @@
   },
   {cfclient, [
     {start_default_instance, true},
+    {log_level, debug},
     {api_key, {environment_variable, "FF_API_KEY_0"}},
     {config, [
       {config_url, "https://config.ff.harness.io/api/1.0"},
-      {events_url, "https://config.ff.harness.io/api/1.0"}
-    ]},
+      {events_url, "https://events.ff.harness.io/api/1.0"},
+      {verbose_evaluation_logs, true}
+      ]},
     {analytics_push_interval, 60000}
   ]
-},
-  {kernel,
-    [{logger_level, all},
-      {logger,
-        [{handler, default, logger_std_h,
-          #{level => debug}},
-          {handler, debug, logger_std_h,
-            #{filters => [{debug, {fun logger_filters:level/2, {stop, neq, debug}}}],
-              config => #{file => "log/debug.log"}}}
-        ]}]}].
+}].
+%%  {kernel,
+%%    [{logger_level, all},
+%%      {logger,
+%%        [{handler, default, logger_std_h,
+%%          #{level => debug}},
+%%          {handler, debug, logger_std_h,
+%%            #{filters => [{debug, {fun logger_filters:level/2, {stop, neq, debug}}}],
+%%              config => #{file => "log/debug.log"}}}
+%%        ]}]}].
