FFM-9376 Add translated Elixir code for three flag eval

--- a/config/sys.config
+++ b/config/sys.config
@@ -19,7 +19,8 @@
   },
   {cfclient, [
     {start_default_instance, true},
-    {api_key, {environment_variable, "FF_API_KEY_0"}},
+    {log_level, debug},
+    {api_key, {environment_variable, "FF_API_KEY"}},
     {config, [
       {config_url, "https://config.ff.harness.io/api/1.0"},
       {events_url, "https://config.ff.harness.io/api/1.0"}
