--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,9 @@
+
+{erl_opts, [debug_info]}.
+
 {deps, [
 %%  {cfclient, "1.0.0", {pkg, harness_ff_erlang_server_sdk}}
-  {cfclient, "1.1.0", {pkg, harness_ff_erlang_server_sdk}}
+  {cfclient, "1.1.1", {pkg, harness_ff_erlang_server_sdk}}
 
 ]}.
 
@@ -8,6 +11,9 @@
   shell,
   [
     {config, "config/sys.config"},
-    {apps, [sample]}
+    {erl_opts, [debug_info]},
+  {apps, [sample]}
   ]
 }.
+
+{ebin, "./src"}.
