FFM-9571 murmur3 experment

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,10 @@
 {deps, [
 %%  {cfclient, "1.0.0", {pkg, harness_ff_erlang_server_sdk}}
-  {cfclient, "1.1.0", {pkg, harness_ff_erlang_server_sdk}}
+  {cfclient, "1.1.0", {pkg, harness_ff_erlang_server_sdk}},
+  {murmur, "1.0.3"}
 
-]}.
+  ]}.
+{project_plugins, [steamroller, rebar3_hex, rebar3_ex_doc, rebar_mix]}.
 
 {
   shell,
